NPTF-96 - Fix z-index issue of team card

--- a/src/components/TeamCard/TeamCard.scss
+++ b/src/components/TeamCard/TeamCard.scss
@@ -146,6 +146,10 @@
         }
     }
 
+    .text-content, .logo {
+        z-index: 1;
+    }
+
     .ellipsis {
         overflow: hidden;
         text-overflow: ellipsis;
